--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-swipeable": "^7.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
