--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-star-ratings": "^2.3.0",
     "react-swipeable": "^7.0.0",
     "react-toastify": "^9.1.1",
     "web-vitals": "^2.1.4"
@@ -42,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-star-ratings": "^2.3.0"
   }
 }
