--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-simple-star-rating": "^5.1.7",
     "react-star-ratings": "^2.3.0",
     "react-swipeable": "^7.0.0",
     "react-toastify": "^9.1.1",
